--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,17 +1,21 @@
 body {
   background-color: black;
+  font-family: Verdana;
   text-align: center;
 }
 h1 {
   color: white;
-  font-family: Verdana;
   font-size: 50px;
   font-weight: normal;
 }
 h2 {
-  font-family: Verdana;
+  color: white;
   font-size: 42px;
   font-weight: 300;
+}
+p.description {
+  color: gray;
+  font-size: 21px;
 }
 a {
   color: aquamarine;
